--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://alexstoner10.github.io/portfolio/",
+  "homepage": "https://alexstoner10.github.io/Portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
