--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: portfolio
+        working-directory: ./portfolio  
 
       - name: Build project
         run: npm run build
-        working-directory: portfolio
+        working-directory: ./portfolio
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
